--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
 name: Dodgeball
 main: com.eyeofender.dodgeball.Dodgeball
-version: 1.2.8
-authors: [LinearLogic, LimeByte]
+version: 1.3.0
+author: LimeByte
 
 softdepend: [MassAPI]
 database: true
