--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,10 @@
-name: Dodgeball
-main: com.eyeofender.dodgeball.Dodgeball
-version: 1.3.0
+name: ${project.name}
 author: LimeByte
+version: ${project.version}
+description: ${project.description}
+
+main: ${project.groupId}.${project.artifactId}.Dodgeball
+load: POSTWORLD
 
 softdepend: [MassAPI]
 database: true
