--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,5 @@
 save-arenas-on-edit: false
 broadcast-on-hit: false
-donation-listener-port: 25564
 max-dodgeballs-held: 5
 lives-standard:
     starting: 3
@@ -20,7 +19,7 @@ global-lobby:
     pitch: 0
 arena-menus:
     Ice Rink:
-        item-id: 79
+        item: ice
         arenas:
             - IceRink1
             - IceRink2
@@ -29,7 +28,7 @@ arena-menus:
             - IceRink5
             - IceRink6
     Garden:
-        item-id: 6
+        item: sapling
         arenas:
             - Garden_1
             - Garden_2
@@ -38,7 +37,7 @@ arena-menus:
             - Garden_5
             - Garden_6
     Nether Madness:
-        item-id: 87
+        item-id: netherrack
         arenas:
             - NetherMadness1
             - NetherMadness2
@@ -47,7 +46,7 @@ arena-menus:
             - NetherMadness5
             - NetherMadness6
     Gym:
-        item-id: 45
+        item-id: brick
         arenas:
             - Gym_1
             - Gym_2
